--- a/Activity1/Makefile
+++ b/Activity1/Makefile
@@ -41,7 +41,7 @@ $(BUILD_DIR):
 
 analysis: $(SRC)
 # Analyse the code using Cppcheck command line utility
-	cppcheck --enable=all --platform=avr8 $^
+	cppcheck --enable=all $^
 
 doc:
 # Build the code code documentation using Doxygen command line utility
