added compile and cppcheck

--- a/.github/workflows/CodeQulaity.yml
+++ b/.github/workflows/CodeQulaity.yml
@@ -2,9 +2,9 @@ name: Cppcheck
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   build:
@@ -17,4 +17,3 @@ jobs:
       run: sudo apt-get install cppcheck
     - name: Code Quality
       run: make analysis
-
